have a nice day!

--- a/indexes/nsc1025/145.md
+++ b/indexes/nsc1025/145.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [陈思敏：华为再售核心业务 接盘者换汤不换药](../../pages/nsc1025/n13364387.md) 
+#### [王友群：给巴黎暴力袭击法轮功学员者的忠告](../../pages/nsc1025/n13362943.md) 
+#### [周晓辉：党媒高调敲打江曾 六中全会不平静](../../pages/nsc1025/n13362873.md) 
+#### [【名家专栏】从历史角度回顾COVID-19](../../pages/nsc1025/n13361917.md) 
 #### [【名家专栏】气候暖化会议虚伪可笑](../../pages/nsc1025/n13361856.md) 
 #### [洪博：三退累计人数逼近3.9亿 小粉红看清中共](../../pages/nsc1025/n13361362.md) 
 #### [石铭：中共十月加剧迫害 逾百法轮功学员被冤判](../../pages/nsc1025/n13360557.md) 
@@ -26,10 +30,6 @@
 #### [周晓辉：打完第三针照感染 北京正蹈以色列覆辙](../../pages/nsc1025/n13354033.md) 
 #### [颜丹：从中国孩子被下令接种疫苗说起](../../pages/nsc1025/n13353978.md) 
 #### [【名家专栏】新一轮博弈 中俄在阿富汗角逐](../../pages/nsc1025/n13353309.md) 
-#### [【有冇搞错】注定失败的气候共产主义](../../pages/nsc1025/n13351534.md) 
-#### [木隶孙：扒一扒中共国防疫的奇葩怪招](../../pages/nsc1025/n13352489.md) 
-#### [王友群：江泽民与108名中共亿元贪官](../../pages/nsc1025/n13352358.md) 
-#### [钟原：六中全会前中共频造势 能防意外吗？](../../pages/nsc1025/n13352023.md) 
 
 ---
 #### 第 [ [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) ] 页
