--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：我舅舅逃离大陆](../../pages/nsc1028/n13343329.md) 
 #### [以中山之名 行共产之实](../../pages/nsc1028/n13346437.md) 
 #### [王友群：“云南王”谭甫仁被暗杀之谜](../../pages/nsc1028/n13357123.md) 
 #### [中共罪行录之五十六：地质学泰斗的不堪晚年](../../pages/nsc1028/n13355675.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之五十二：以革命的名义杀人](../../pages/nsc1028/n13247326.md) 
 #### [林辉：王洪文两个“没想到” 遭酷刑被关秦城](../../pages/nsc1028/n13244136.md) 
 #### [王友群：傅作义身边的中共间谍阎又文](../../pages/nsc1028/n13244038.md) 
-#### [袁斌：我们从小到大学到的历史哪些是假的（9）](../../pages/nsc1028/n13243175.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
