have a nice day!

--- a/indexes/nsc1025/145.md
+++ b/indexes/nsc1025/145.md
@@ -1,5 +1,10 @@
 ### 纪元评论：时政评论
 ---
+#### [何清涟：习近平是否接受美国的和平共处呼吁？](../../pages/nsc1025/n13367552.md) 
+#### [钟原：六中全会中共闭门忙内斗 难出国策](../../pages/nsc1025/n13365985.md) 
+#### [【名家专栏】儿童不应接种COVID疫苗](../../pages/nsc1025/n13364335.md) 
+#### [周晓辉：拒做疫苗接种后抗体检测 当局担心两点](../../pages/nsc1025/n13365692.md) 
+#### [古啸：第三份历史决议将出台 中共内斗加剧](../../pages/nsc1025/n13365768.md) 
 #### [陈思敏：华为再售核心业务 接盘者换汤不换药](../../pages/nsc1025/n13364387.md) 
 #### [王友群：给巴黎暴力袭击法轮功学员者的忠告](../../pages/nsc1025/n13362943.md) 
 #### [周晓辉：党媒高调敲打江曾 六中全会不平静](../../pages/nsc1025/n13362873.md) 
@@ -25,11 +30,6 @@
 #### [何清涟：中国与美欧的“气候-减排”暗战](../../pages/nsc1025/n13354713.md) 
 #### [王友群：张高丽的后台江泽民也曾被举报淫乱](../../pages/nsc1025/n13354086.md) 
 #### [谢田：欧美各国接连抛弃 中共世贸虚名徒具](../../pages/nsc1025/n13354080.md) 
-#### [【纪元专栏】疫苗强制背后：道德恐慌对公民自由的蔑视](../../pages/nsc1025/n13354106.md) 
-#### [郝平：张高丽乱伦核炸 背后三大焦灼看点](../../pages/nsc1025/n13354059.md) 
-#### [周晓辉：打完第三针照感染 北京正蹈以色列覆辙](../../pages/nsc1025/n13354033.md) 
-#### [颜丹：从中国孩子被下令接种疫苗说起](../../pages/nsc1025/n13353978.md) 
-#### [【名家专栏】新一轮博弈 中俄在阿富汗角逐](../../pages/nsc1025/n13353309.md) 
 
 ---
 #### 第 [ [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) / [138](./138.md) ] 页
