--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [豪车女遭查喊“叫yuwei过来” 网民：酒驾反腐](../../pages/nsc993/n13366842.md) 
+#### [理悟：党把代表当什么](../../pages/nsc993/n13366816.md) 
 #### [【网海拾贝】中共召开六中全会 北京阴风黑雾弥漫](../../pages/nsc993/n13364344.md) 
 #### [“自干五”和“小粉红”的觉醒心路（5）](../../pages/nsc993/n13364305.md) 
 #### [【网海拾贝】新一出中共权斗戏码，揪出江泽民白手套](../../pages/nsc993/n13361697.md) 
@@ -28,8 +30,6 @@
 #### [瑞丽防疫政策粗暴 市民控诉民不聊生](../../pages/nsc993/n13335277.md) 
 #### [【网海拾贝】中共入联合国50年，祸害人类50年](../../pages/nsc993/n13332622.md) 
 #### [【网海拾贝】到处爆炸 “中国是最安全的国家”？](../../pages/nsc993/n13330109.md) 
-#### [疫苗受害者：“我可怜的女儿不能这样悲惨地离世”](../../pages/nsc993/n13329584.md) 
-#### [云松：双十节有感](../../pages/nsc993/n13327729.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
