--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [千百度：胡锡进评美议员访台 网友：吹牛不脸红](../../pages/nsc993/n13369454.md) 
+#### [【网海拾贝】利用病毒控制人民的中共比病毒还毒](../../pages/nsc993/n13366895.md) 
 #### [豪车女遭查喊“叫yuwei过来” 网民：酒驾反腐](../../pages/nsc993/n13366842.md) 
 #### [理悟：党把代表当什么](../../pages/nsc993/n13366816.md) 
 #### [【网海拾贝】中共召开六中全会 北京阴风黑雾弥漫](../../pages/nsc993/n13364344.md) 
@@ -28,8 +30,6 @@
 #### [中共是怎么为自己涂脂抹粉的（3）](../../pages/nsc993/n13335534.md) 
 #### [【网海拾贝】中共暴政制造了一个又一个张献忠](../../pages/nsc993/n13335375.md) 
 #### [瑞丽防疫政策粗暴 市民控诉民不聊生](../../pages/nsc993/n13335277.md) 
-#### [【网海拾贝】中共入联合国50年，祸害人类50年](../../pages/nsc993/n13332622.md) 
-#### [【网海拾贝】到处爆炸 “中国是最安全的国家”？](../../pages/nsc993/n13330109.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
