--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】冥界之花惊现 中共的末日将至？](../../pages/nsc993/n13371400.md) 
+#### [【网海拾贝】中共六中全会是对邓小平的否定](../../pages/nsc993/n13369862.md) 
 #### [千百度：胡锡进评美议员访台 网友：吹牛不脸红](../../pages/nsc993/n13369454.md) 
 #### [【网海拾贝】利用病毒控制人民的中共比病毒还毒](../../pages/nsc993/n13366895.md) 
 #### [豪车女遭查喊“叫yuwei过来” 网民：酒驾反腐](../../pages/nsc993/n13366842.md) 
@@ -28,8 +30,6 @@
 #### [中共是怎么为自己涂脂抹粉的（4）](../../pages/nsc993/n13340568.md) 
 #### [【网海拾贝】帮帮我们瑞丽人吧！救救我们吧！](../../pages/nsc993/n13339001.md) 
 #### [中共是怎么为自己涂脂抹粉的（3）](../../pages/nsc993/n13335534.md) 
-#### [【网海拾贝】中共暴政制造了一个又一个张献忠](../../pages/nsc993/n13335375.md) 
-#### [瑞丽防疫政策粗暴 市民控诉民不聊生](../../pages/nsc993/n13335277.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
