have a nice day!

--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [惠虎宇：中共掠夺财富之恶](../../pages/nsc1028/n13374142.md) 
+#### [中共罪行录之五十七：文革毁坏的名胜古迹](../../pages/nsc1028/n13373282.md) 
+#### [李清：陶希圣之女 留在了大陆](../../pages/nsc1028/n13367727.md) 
 #### [李清：我舅舅逃离大陆](../../pages/nsc1028/n13343329.md) 
 #### [以中山之名 行共产之实](../../pages/nsc1028/n13346437.md) 
 #### [王友群：“云南王”谭甫仁被暗杀之谜](../../pages/nsc1028/n13357123.md) 
@@ -27,9 +30,6 @@
 #### [袁斌：我们从小到大学到的历史哪些是假的（10）](../../pages/nsc1028/n13252177.md) 
 #### [中共罪行录之五十三：“文革”中被逼自杀的科学家](../../pages/nsc1028/n13249512.md) 
 #### [林辉：江青文艺界三大走卒之悲剧人生](../../pages/nsc1028/n13248164.md) 
-#### [中共罪行录之五十二：以革命的名义杀人](../../pages/nsc1028/n13247326.md) 
-#### [林辉：王洪文两个“没想到” 遭酷刑被关秦城](../../pages/nsc1028/n13244136.md) 
-#### [王友群：傅作义身边的中共间谍阎又文](../../pages/nsc1028/n13244038.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
