--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】六中全会给中共领导人重排座次](../../pages/nsc993/n13373604.md) 
 #### [【网海拾贝】冥界之花惊现 中共的末日将至？](../../pages/nsc993/n13371400.md) 
 #### [【网海拾贝】中共六中全会是对邓小平的否定](../../pages/nsc993/n13369862.md) 
 #### [千百度：胡锡进评美议员访台 网友：吹牛不脸红](../../pages/nsc993/n13369454.md) 
@@ -29,7 +30,6 @@
 #### [李春草：阿 Q 自白](../../pages/nsc993/n13343668.md) 
 #### [中共是怎么为自己涂脂抹粉的（4）](../../pages/nsc993/n13340568.md) 
 #### [【网海拾贝】帮帮我们瑞丽人吧！救救我们吧！](../../pages/nsc993/n13339001.md) 
-#### [中共是怎么为自己涂脂抹粉的（3）](../../pages/nsc993/n13335534.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
