--- a/indexes/nsc1025/146.md
+++ b/indexes/nsc1025/146.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [钟原：事实核查 六中全会公报有多虚假（下）](../../pages/nsc1025/n13370944.md) 
+#### [王友群：原中央军委副主席徐才厚有多腐败?](../../pages/nsc1025/n13372456.md) 
+#### [【名家专栏】中共治下 一个女性被虐待的社会](../../pages/nsc1025/n13372071.md) 
 #### [【名家专栏】国会需警惕TikTok的威胁](../../pages/nsc1025/n13372082.md) 
 #### [岳山：六中全会中央委员减少 藏何秘密](../../pages/nsc1025/n13372300.md) 
 #### [王赫：假、硬、僵——评中共六中全会公报](../../pages/nsc1025/n13371328.md) 
@@ -27,9 +30,6 @@
 #### [王友群：给巴黎暴力袭击法轮功学员者的忠告](../../pages/nsc1025/n13362943.md) 
 #### [周晓辉：党媒高调敲打江曾 六中全会不平静](../../pages/nsc1025/n13362873.md) 
 #### [【名家专栏】从历史角度回顾COVID-19](../../pages/nsc1025/n13361917.md) 
-#### [【名家专栏】气候暖化会议虚伪可笑](../../pages/nsc1025/n13361856.md) 
-#### [洪博：三退累计人数逼近3.9亿 小粉红看清中共](../../pages/nsc1025/n13361362.md) 
-#### [石铭：中共十月加剧迫害 逾百法轮功学员被冤判](../../pages/nsc1025/n13360557.md) 
 
 ---
 #### 第 [ [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) ] 页
