have a nice day!

--- a/indexes/nsc1025/146.md
+++ b/indexes/nsc1025/146.md
@@ -1,5 +1,15 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】移民能解决美国劳动力短缺吗？](../../pages/nsc1025/n13375319.md) 
+#### [周晓辉：全会公报未批邓江 习继续背黑锅前行](../../pages/nsc1025/n13375516.md) 
+#### [张菁：在中国 真正的新闻已死](../../pages/nsc1025/n13375484.md) 
+#### [【名家专栏】强制接种疫苗的弊端](../../pages/nsc1025/n13375306.md) 
+#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13375041.md) 
+#### [王友群：中共六中全会透露三个重大信息](../../pages/nsc1025/n13374571.md) 
+#### [郝平：中共百年僵尸 六中全会难以还魂](../../pages/nsc1025/n13374084.md) 
+#### [杨威：拜习会在即 谁提前亮的牌更多？](../../pages/nsc1025/n13373895.md) 
+#### [【名家专栏】5700万中国产刷卡器曝安全隐患](../../pages/nsc1025/n13373775.md) 
+#### [【名家专栏】中共学术间谍活动是另一场瘟疫](../../pages/nsc1025/n13373736.md) 
 #### [钟原：事实核查 六中全会公报有多虚假（下）](../../pages/nsc1025/n13370944.md) 
 #### [王友群：原中央军委副主席徐才厚有多腐败?](../../pages/nsc1025/n13372456.md) 
 #### [【名家专栏】中共治下 一个女性被虐待的社会](../../pages/nsc1025/n13372071.md) 
@@ -20,16 +30,6 @@
 #### [王赫：从一则海关通告的误导谈中共流氓性](../../pages/nsc1025/n13368020.md) 
 #### [杨威：中共对美忽降调 无奈还是真妥协？](../../pages/nsc1025/n13368037.md) 
 #### [【名家专栏】国殇日谈铭记为自由而战的意义](../../pages/nsc1025/n13368209.md) 
-#### [【名家专栏】美联储须采取行动防房地产崩溃](../../pages/nsc1025/n13367393.md) 
-#### [何清涟：习近平是否接受美国的和平共处呼吁？](../../pages/nsc1025/n13367552.md) 
-#### [钟原：六中全会中共闭门忙内斗 难出国策](../../pages/nsc1025/n13365985.md) 
-#### [【名家专栏】儿童不应接种COVID疫苗](../../pages/nsc1025/n13364335.md) 
-#### [周晓辉：拒做疫苗接种后抗体检测 当局担心两点](../../pages/nsc1025/n13365692.md) 
-#### [古啸：第三份历史决议将出台 中共内斗加剧](../../pages/nsc1025/n13365768.md) 
-#### [陈思敏：华为再售核心业务 接盘者换汤不换药](../../pages/nsc1025/n13364387.md) 
-#### [王友群：给巴黎暴力袭击法轮功学员者的忠告](../../pages/nsc1025/n13362943.md) 
-#### [周晓辉：党媒高调敲打江曾 六中全会不平静](../../pages/nsc1025/n13362873.md) 
-#### [【名家专栏】从历史角度回顾COVID-19](../../pages/nsc1025/n13361917.md) 
 
 ---
 #### 第 [ [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) ] 页
