--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,9 @@
 ### 纪元评论：自由广场
 ---
+#### [“我被菲律宾了，我的行程卡变黄了”](../../pages/nsc993/n13375076.md) 
+#### [【网海拾贝】韭菜们以后想关灯吃面都吃不起咯](../../pages/nsc993/n13375100.md) 
+#### [祝君安：读六中公报](../../pages/nsc993/n13375031.md) 
+#### [朴厚：惊闻活摘](../../pages/nsc993/n13374864.md) 
 #### [【网海拾贝】六中全会给中共领导人重排座次](../../pages/nsc993/n13373604.md) 
 #### [【网海拾贝】冥界之花惊现 中共的末日将至？](../../pages/nsc993/n13371400.md) 
 #### [【网海拾贝】中共六中全会是对邓小平的否定](../../pages/nsc993/n13369862.md) 
@@ -26,10 +30,6 @@
 #### [发表情包也被拘，网友：警察“想抓谁就抓谁”](../../pages/nsc993/n13349925.md) 
 #### [【网海拾贝】“抗疫战争的伟大胜利”毁了多少人的生活](../../pages/nsc993/n13347377.md) 
 #### [大陆家长质疑儿童打新冠疫苗决策不透明](../../pages/nsc993/n13347261.md) 
-#### [【网海拾贝】美国一舞台湾牌，中共就像疯牛一样](../../pages/nsc993/n13344669.md) 
-#### [李春草：阿 Q 自白](../../pages/nsc993/n13343668.md) 
-#### [中共是怎么为自己涂脂抹粉的（4）](../../pages/nsc993/n13340568.md) 
-#### [【网海拾贝】帮帮我们瑞丽人吧！救救我们吧！](../../pages/nsc993/n13339001.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
