have a nice day!

--- a/indexes/nsc1025/146.md
+++ b/indexes/nsc1025/146.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [颜纯钩：诓草民割韭菜，中共再饮地产续命汤](../../pages/nsc1025/n13376655.md) 
+#### [周田：美军哪些武器令中共军队难以应对（一）](../../pages/nsc1025/n13375500.md) 
 #### [【名家专栏】移民能解决美国劳动力短缺吗？](../../pages/nsc1025/n13375319.md) 
 #### [周晓辉：全会公报未批邓江 习继续背黑锅前行](../../pages/nsc1025/n13375516.md) 
 #### [张菁：在中国 真正的新闻已死](../../pages/nsc1025/n13375484.md) 
@@ -28,8 +30,6 @@
 #### [陈思敏：中共楼市调控松动 房企债不如地方债惊人](../../pages/nsc1025/n13369481.md) 
 #### [袁斌：管轶教授呼吁检测抗体的访谈为何被删](../../pages/nsc1025/n13369386.md) 
 #### [王赫：从一则海关通告的误导谈中共流氓性](../../pages/nsc1025/n13368020.md) 
-#### [杨威：中共对美忽降调 无奈还是真妥协？](../../pages/nsc1025/n13368037.md) 
-#### [【名家专栏】国殇日谈铭记为自由而战的意义](../../pages/nsc1025/n13368209.md) 
 
 ---
 #### 第 [ [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) ] 页
