--- a/indexes/nsc1035/52.md
+++ b/indexes/nsc1035/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：感悟随笔
 ---
+#### [黄天辰：听“墙外”遥想当年离墙之旅](../../pages/nsc1035/n13377229.md) 
 #### [大峡谷掠影遐思](../../pages/nsc1035/n13354743.md) 
 #### [慕容雪儿：如何判断，你看到的世界是否真实？](../../pages/nsc1035/n13332569.md) 
 #### [清荷：叫610的信心怎能不垮？](../../pages/nsc1035/n13304848.md) 
@@ -29,7 +30,6 @@
 #### [练就耐心带来的益处](../../pages/nsc1035/n13081876.md) 
 #### [一真：生命——个普通家庭的故事](../../pages/nsc1035/n13075782.md) 
 #### [清竹：观小舞剧《龙门客栈》有感](../../pages/nsc1035/n13069850.md) 
-#### [养育孩子：平衡自由与安全的技巧](../../pages/nsc1035/n13054510.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
