--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [谢田：科技巨头的元宇宙或是异次元的陷阱](../../pages/nsc993/n13376012.md) 
+#### [【网海拾贝】9名网友实名给六中全会提建议竟遭审讯](../../pages/nsc993/n13376535.md) 
+#### [中共罪行录之五十八：高度组织化的抢劫](../../pages/nsc993/n13376009.md) 
 #### [“我被菲律宾了，我的行程卡变黄了”](../../pages/nsc993/n13375076.md) 
 #### [【网海拾贝】韭菜们以后想关灯吃面都吃不起咯](../../pages/nsc993/n13375100.md) 
 #### [祝君安：读六中公报](../../pages/nsc993/n13375031.md) 
@@ -27,9 +30,6 @@
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13352744.md) 
 #### [【网海拾贝】你们的愚蠢行径是要被写进历史的](../../pages/nsc993/n13350078.md) 
 #### [费良勇：浴火凤凰法轮功](../../pages/nsc993/n13350213.md) 
-#### [发表情包也被拘，网友：警察“想抓谁就抓谁”](../../pages/nsc993/n13349925.md) 
-#### [【网海拾贝】“抗疫战争的伟大胜利”毁了多少人的生活](../../pages/nsc993/n13347377.md) 
-#### [大陆家长质疑儿童打新冠疫苗决策不透明](../../pages/nsc993/n13347261.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
