have a nice day!

--- a/indexes/nsc1025/147.md
+++ b/indexes/nsc1025/147.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [林忌：台湾死结难解 美中会谈自说自话](../../pages/nsc1025/n13379950.md) 
 #### [周晓辉：因丑闻扬名世界的中共高官不止张高丽](../../pages/nsc1025/n13377763.md) 
 #### [陈思敏：中国粮食丰收增产背后的四大问题](../../pages/nsc1025/n13379120.md) 
 #### [袁斌：上饶宠物狗扑杀事件 为何众人不服官方通报](../../pages/nsc1025/n13379028.md) 
@@ -29,7 +30,6 @@
 #### [沈舟：美国2021中共军力报告——常规军备](../../pages/nsc1025/n13370660.md) 
 #### [周晓辉：刘新云窃听山西书记省长 高官无隐私](../../pages/nsc1025/n13370565.md) 
 #### [【名家专栏】《赤龙之爪》影评](../../pages/nsc1025/n13369685.md) 
-#### [【名家专栏】中共专制政策导致更多工厂关闭](../../pages/nsc1025/n13369707.md) 
 
 ---
-#### 第 [ [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) / [139](./139.md) ] 页
+#### 第 [ [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) ] 页
