--- a/indexes/nsc1026/52.md
+++ b/indexes/nsc1026/52.md
@@ -1,5 +1,6 @@
 ### 纪元评论：财经评论
 ---
+#### [【财经话题】长期的能源危机解除了吗？](../../pages/nsc1026/n13378041.md) 
 #### [【财经话题】通胀意外升温 美股将牛市反转？](../../pages/nsc1026/n13370659.md) 
 #### [王赫：中共开放债市 外资持疑](../../pages/nsc1026/n13366203.md) 
 #### [王赫：中国经济迷思之四—外商投资第一？](../../pages/nsc1026/n13354150.md) 
@@ -29,7 +30,6 @@
 #### [【美股瞭望】商品行情崩挫 科技股重回主流](../../pages/nsc1026/n13029798.md) 
 #### [【财经话题】当避险资产只剩下黄金上涨时](../../pages/nsc1026/n12975626.md) 
 #### [【谈股论金】比特币正示范金融市场泡沫破灭](../../pages/nsc1026/n12961769.md) 
-#### [数据派：研判财经不能离开信仰大背景](../../pages/nsc1026/n12932684.md) 
 
 ---
 #### 第 [ [52](./52.md) / [51](./51.md) / [50](./50.md) / [49](./49.md) / [48](./48.md) / [47](./47.md) / [46](./46.md) / [45](./45.md) ] 页
