--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [喊yuwei的孙某被判，网民提三大疑问](../../pages/nsc993/n13379080.md) 
 #### [谢田：科技巨头的元宇宙或是异次元的陷阱](../../pages/nsc993/n13376012.md) 
 #### [【网海拾贝】9名网友实名给六中全会提建议竟遭审讯](../../pages/nsc993/n13376535.md) 
 #### [中共罪行录之五十八：高度组织化的抢劫](../../pages/nsc993/n13376009.md) 
@@ -29,7 +30,6 @@
 #### [张高丽性侵彭帅 网民吐糟](../../pages/nsc993/n13352787.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13352744.md) 
 #### [【网海拾贝】你们的愚蠢行径是要被写进历史的](../../pages/nsc993/n13350078.md) 
-#### [费良勇：浴火凤凰法轮功](../../pages/nsc993/n13350213.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
