have a nice day!

--- a/indexes/nsc1025/147.md
+++ b/indexes/nsc1025/147.md
@@ -1,5 +1,14 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】新法案将向非法移民支付百亿美元](../../pages/nsc1025/n13381775.md) 
+#### [夏林：中共控制气候变化，你相信吗？](../../pages/nsc1025/n13381993.md) 
+#### [【名家专栏】中共怕泄露真实经济数据 拒合作](../../pages/nsc1025/n13381823.md) 
+#### [程晓农：换届、独裁和政变？](../../pages/nsc1025/n13381085.md) 
+#### [王友群：百年中共没能解决接班人问题](../../pages/nsc1025/n13380067.md) 
+#### [杨威：拜习视频会晤 美中关系僵局难破](../../pages/nsc1025/n13380004.md) 
+#### [郝平：第三份历史决议亮相 曝中共十大危机](../../pages/nsc1025/n13380028.md) 
+#### [【名家专栏】拜登面临来自朝鲜的道义挑战](../../pages/nsc1025/n13379547.md) 
+#### [【名家专栏】强制疫苗令违背社会核心价值观](../../pages/nsc1025/n13379558.md) 
 #### [林忌：台湾死结难解 美中会谈自说自话](../../pages/nsc1025/n13379950.md) 
 #### [周晓辉：因丑闻扬名世界的中共高官不止张高丽](../../pages/nsc1025/n13377763.md) 
 #### [陈思敏：中国粮食丰收增产背后的四大问题](../../pages/nsc1025/n13379120.md) 
@@ -21,15 +30,6 @@
 #### [【名家专栏】中共学术间谍活动是另一场瘟疫](../../pages/nsc1025/n13373736.md) 
 #### [钟原：事实核查 六中全会公报有多虚假（下）](../../pages/nsc1025/n13370944.md) 
 #### [王友群：原中央军委副主席徐才厚有多腐败?](../../pages/nsc1025/n13372456.md) 
-#### [【名家专栏】中共治下 一个女性被虐待的社会](../../pages/nsc1025/n13372071.md) 
-#### [【名家专栏】国会需警惕TikTok的威胁](../../pages/nsc1025/n13372082.md) 
-#### [岳山：六中全会中央委员减少 藏何秘密](../../pages/nsc1025/n13372300.md) 
-#### [王赫：假、硬、僵——评中共六中全会公报](../../pages/nsc1025/n13371328.md) 
-#### [袁斌：YuWei是谁？南昌警方的通告你信吗](../../pages/nsc1025/n13371386.md) 
-#### [钟原：事实核查 六中全会公报有多虚假（上）](../../pages/nsc1025/n13370570.md) 
-#### [沈舟：美国2021中共军力报告——常规军备](../../pages/nsc1025/n13370660.md) 
-#### [周晓辉：刘新云窃听山西书记省长 高官无隐私](../../pages/nsc1025/n13370565.md) 
-#### [【名家专栏】《赤龙之爪》影评](../../pages/nsc1025/n13369685.md) 
 
 ---
 #### 第 [ [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) ] 页
