--- a/indexes/nsc993/66.md
+++ b/indexes/nsc993/66.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [中共新规严打“翻墙” 网友讥讽](../../pages/nsc993/n13381222.md) 
+#### [【网海拾贝】中共是有史以来最大的汉奸团伙](../../pages/nsc993/n13381269.md) 
+#### [【网海拾贝】“拜习会”重在疗伤，有无突破要看东奥](../../pages/nsc993/n13379205.md) 
 #### [喊yuwei的孙某被判，网民提三大疑问](../../pages/nsc993/n13379080.md) 
 #### [谢田：科技巨头的元宇宙或是异次元的陷阱](../../pages/nsc993/n13376012.md) 
 #### [【网海拾贝】9名网友实名给六中全会提建议竟遭审讯](../../pages/nsc993/n13376535.md) 
@@ -27,9 +30,6 @@
 #### [“自干五”和“小粉红”的觉醒心路（2）](../../pages/nsc993/n13357310.md) 
 #### [【网海拾贝】是谁给了彭帅曝光张高丽的胆子？](../../pages/nsc993/n13355728.md) 
 #### [【网海拾贝】信中共的彭帅与不信中共的李娜](../../pages/nsc993/n13352875.md) 
-#### [张高丽性侵彭帅 网民吐糟](../../pages/nsc993/n13352787.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13352744.md) 
-#### [【网海拾贝】你们的愚蠢行径是要被写进历史的](../../pages/nsc993/n13350078.md) 
 
 ---
 #### 第 [ [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) / [59](./59.md) ] 页
