have a nice day!

--- a/indexes/nsc1025/147.md
+++ b/indexes/nsc1025/147.md
@@ -1,5 +1,11 @@
 ### 纪元评论：时政评论
 ---
+#### [谢田：国家安全顾问沙利文错误有三](../../pages/nsc1025/n13384514.md) 
+#### [【名家专栏】回收电动车电池可盈利吗？](../../pages/nsc1025/n13381631.md) 
+#### [钟原：中共宣传拜习会多离谱（上）](../../pages/nsc1025/n13382610.md) 
+#### [王友群：把女儿“献给”徐才厚的谷俊山](../../pages/nsc1025/n13382520.md) 
+#### [王赫：拜习视频会与中共心理战](../../pages/nsc1025/n13382429.md) 
+#### [周晓辉： 六中全会决议缘何淡化避谈罪恶](../../pages/nsc1025/n13382247.md) 
 #### [【名家专栏】新法案将向非法移民支付百亿美元](../../pages/nsc1025/n13381775.md) 
 #### [夏林：中共控制气候变化，你相信吗？](../../pages/nsc1025/n13381993.md) 
 #### [【名家专栏】中共怕泄露真实经济数据 拒合作](../../pages/nsc1025/n13381823.md) 
@@ -24,12 +30,6 @@
 #### [【名家专栏】强制接种疫苗的弊端](../../pages/nsc1025/n13375306.md) 
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc1025/n13375041.md) 
 #### [王友群：中共六中全会透露三个重大信息](../../pages/nsc1025/n13374571.md) 
-#### [郝平：中共百年僵尸 六中全会难以还魂](../../pages/nsc1025/n13374084.md) 
-#### [杨威：拜习会在即 谁提前亮的牌更多？](../../pages/nsc1025/n13373895.md) 
-#### [【名家专栏】5700万中国产刷卡器曝安全隐患](../../pages/nsc1025/n13373775.md) 
-#### [【名家专栏】中共学术间谍活动是另一场瘟疫](../../pages/nsc1025/n13373736.md) 
-#### [钟原：事实核查 六中全会公报有多虚假（下）](../../pages/nsc1025/n13370944.md) 
-#### [王友群：原中央军委副主席徐才厚有多腐败?](../../pages/nsc1025/n13372456.md) 
 
 ---
 #### 第 [ [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) ] 页
