--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】央视代彭帅写信，中共弱智弱爆了](../../pages/nsc993/n13386281.md) 
+#### [央视公布彭帅“亲笔信”，你信吗？没人信！](../../pages/nsc993/n13386234.md) 
+#### [关乐：延安整风（上）](../../pages/nsc993/n13384652.md) 
 #### [黄明志新歌打动墙内墙外人 听众热评](../../pages/nsc993/n13383506.md) 
 #### [中共新规严打“翻墙” 网友讥讽](../../pages/nsc993/n13381222.md) 
 #### [【网海拾贝】中共是有史以来最大的汉奸团伙](../../pages/nsc993/n13381269.md) 
@@ -27,9 +30,6 @@
 #### [“自干五”和“小粉红”的觉醒心路（3）](../../pages/nsc993/n13358759.md) 
 #### [【网海拾贝】时空伴随者，全民参演科幻剧？](../../pages/nsc993/n13358829.md) 
 #### [【网海拾贝】张高丽性侵，痛批李云迪的媒体去哪了](../../pages/nsc993/n13357431.md) 
-#### [吐为快：赵国民主赋](../../pages/nsc993/n13357508.md) 
-#### [“自干五”和“小粉红”的觉醒心路（2）](../../pages/nsc993/n13357310.md) 
-#### [【网海拾贝】是谁给了彭帅曝光张高丽的胆子？](../../pages/nsc993/n13355728.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
