have a nice day!

--- a/indexes/nsc1025/148.md
+++ b/indexes/nsc1025/148.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [周田：美军哪些武器令中共军队难以应对（二）](../../pages/nsc1025/n13388240.md) 
+#### [周晓辉：孟宏伟妻突发声有蹊跷 或涉高层内斗](../../pages/nsc1025/n13388184.md) 
 #### [王赫：2021中共政界的七则丑闻](../../pages/nsc1025/n13387945.md) 
 #### [杨威：美国连出拳 拜习会后“时与势”忽变？](../../pages/nsc1025/n13387025.md) 
 #### [【名家专栏】《美国独立宣言》中的价值观](../../pages/nsc1025/n13386516.md) 
@@ -28,8 +30,6 @@
 #### [杨威：拜习视频会晤 美中关系僵局难破](../../pages/nsc1025/n13380004.md) 
 #### [郝平：第三份历史决议亮相 曝中共十大危机](../../pages/nsc1025/n13380028.md) 
 #### [【名家专栏】拜登面临来自朝鲜的道义挑战](../../pages/nsc1025/n13379547.md) 
-#### [【名家专栏】强制疫苗令违背社会核心价值观](../../pages/nsc1025/n13379558.md) 
-#### [林忌：台湾死结难解 美中会谈自说自话](../../pages/nsc1025/n13379950.md) 
 
 ---
-#### 第 [ [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) / [140](./140.md) ] 页
+#### 第 [ [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) ] 页
