--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [李清：倪匡逃港后 成“香港四大才子”之一](../../pages/nsc1028/n13377522.md) 
 #### [惠虎宇：中共掠夺财富之恶](../../pages/nsc1028/n13374142.md) 
 #### [中共罪行录之五十七：文革毁坏的名胜古迹](../../pages/nsc1028/n13373282.md) 
 #### [李清：陶希圣之女 留在了大陆](../../pages/nsc1028/n13367727.md) 
@@ -29,7 +30,6 @@
 #### [中共是怎么为自己涂脂抹粉的（1）](../../pages/nsc1028/n13257311.md) 
 #### [袁斌：我们从小到大学到的历史哪些是假的（10）](../../pages/nsc1028/n13252177.md) 
 #### [中共罪行录之五十三：“文革”中被逼自杀的科学家](../../pages/nsc1028/n13249512.md) 
-#### [林辉：江青文艺界三大走卒之悲剧人生](../../pages/nsc1028/n13248164.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
