--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】掩盖张高丽性侵 中共偷鸡不成蚀把米](../../pages/nsc993/n13388072.md) 
+#### [彭帅事件发酵 网友热议](../../pages/nsc993/n13387859.md) 
+#### [关乐：延安整风 （中）](../../pages/nsc993/n13387246.md) 
 #### [【网海拾贝】央视代彭帅写信，中共弱智弱爆了](../../pages/nsc993/n13386281.md) 
 #### [央视公布彭帅“亲笔信”，你信吗？没人信！](../../pages/nsc993/n13386234.md) 
 #### [关乐：延安整风（上）](../../pages/nsc993/n13384652.md) 
@@ -27,9 +30,6 @@
 #### [【网海拾贝】新一出中共权斗戏码，揪出江泽民白手套](../../pages/nsc993/n13361697.md) 
 #### [“自干五”和“小粉红”的觉醒心路（4）](../../pages/nsc993/n13361539.md) 
 #### [唐付民：抗御新冠应人工免疫和自然免疫有机配合](../../pages/nsc993/n13361526.md) 
-#### [“自干五”和“小粉红”的觉醒心路（3）](../../pages/nsc993/n13358759.md) 
-#### [【网海拾贝】时空伴随者，全民参演科幻剧？](../../pages/nsc993/n13358829.md) 
-#### [【网海拾贝】张高丽性侵，痛批李云迪的媒体去哪了](../../pages/nsc993/n13357431.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
