have a nice day!

--- a/indexes/nsc1025/148.md
+++ b/indexes/nsc1025/148.md
@@ -1,5 +1,8 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】中共宣传抗疫榜样 是推广强权](../../pages/nsc1025/n13389243.md) 
+#### [唐付民：改革开放，不只是双向的更应该是立体化的！](../../pages/nsc1025/n13388852.md) 
+#### [【名家专栏】中国粮“慌”不仅仅关乎食品](../../pages/nsc1025/n13388045.md) 
 #### [周田：美军哪些武器令中共军队难以应对（二）](../../pages/nsc1025/n13388240.md) 
 #### [周晓辉：孟宏伟妻突发声有蹊跷 或涉高层内斗](../../pages/nsc1025/n13388184.md) 
 #### [王赫：2021中共政界的七则丑闻](../../pages/nsc1025/n13387945.md) 
@@ -27,9 +30,6 @@
 #### [【名家专栏】中共怕泄露真实经济数据 拒合作](../../pages/nsc1025/n13381823.md) 
 #### [程晓农：换届、独裁和政变？](../../pages/nsc1025/n13381085.md) 
 #### [王友群：百年中共没能解决接班人问题](../../pages/nsc1025/n13380067.md) 
-#### [杨威：拜习视频会晤 美中关系僵局难破](../../pages/nsc1025/n13380004.md) 
-#### [郝平：第三份历史决议亮相 曝中共十大危机](../../pages/nsc1025/n13380028.md) 
-#### [【名家专栏】拜登面临来自朝鲜的道义挑战](../../pages/nsc1025/n13379547.md) 
 
 ---
 #### 第 [ [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) ] 页
