--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】美应将打开党国互联网作为要务](../../pages/nsc993/n13388446.md) 
+#### [陈达：“收复”台湾实冒名](../../pages/nsc993/n13388644.md) 
+#### [关乐：延安整风 （下）](../../pages/nsc993/n13388432.md) 
 #### [【网海拾贝】掩盖张高丽性侵 中共偷鸡不成蚀把米](../../pages/nsc993/n13388072.md) 
 #### [彭帅事件发酵 网友热议](../../pages/nsc993/n13387859.md) 
 #### [关乐：延安整风 （中）](../../pages/nsc993/n13387246.md) 
@@ -27,9 +30,6 @@
 #### [理悟：党把代表当什么](../../pages/nsc993/n13366816.md) 
 #### [【网海拾贝】中共召开六中全会 北京阴风黑雾弥漫](../../pages/nsc993/n13364344.md) 
 #### [“自干五”和“小粉红”的觉醒心路（5）](../../pages/nsc993/n13364305.md) 
-#### [【网海拾贝】新一出中共权斗戏码，揪出江泽民白手套](../../pages/nsc993/n13361697.md) 
-#### [“自干五”和“小粉红”的觉醒心路（4）](../../pages/nsc993/n13361539.md) 
-#### [唐付民：抗御新冠应人工免疫和自然免疫有机配合](../../pages/nsc993/n13361526.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
