--- a/indexes/nsc1025/148.md
+++ b/indexes/nsc1025/148.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：阿富汗现饥荒 中共帮塔利班小心翼翼](../../pages/nsc1025/n13391087.md) 
+#### [江西防疫扑杀宠物狗 党文化扭曲人性的例证](../../pages/nsc1025/n13390451.md) 
+#### [程晓农：白宫被迫进入中美冷战](../../pages/nsc1025/n13390313.md) 
+#### [【名家专栏】美国的艺术和文化需重归传统](../../pages/nsc1025/n13388042.md) 
+#### [钟原：前任中共领导人各掌权多少年（上）](../../pages/nsc1025/n13363341.md) 
+#### [张菁：中共频造新词的背后](../../pages/nsc1025/n13389672.md) 
+#### [岳山：北京二十大防反习 习家军铺满公安部](../../pages/nsc1025/n13389152.md) 
 #### [【名家专栏】中共宣传抗疫榜样 是推广强权](../../pages/nsc1025/n13389243.md) 
 #### [唐付民：改革开放，不只是双向的更应该是立体化的！](../../pages/nsc1025/n13388852.md) 
 #### [【名家专栏】中国粮“慌”不仅仅关乎食品](../../pages/nsc1025/n13388045.md) 
@@ -23,13 +30,6 @@
 #### [【名家专栏】回收电动车电池可盈利吗？](../../pages/nsc1025/n13381631.md) 
 #### [钟原：中共宣传拜习会多离谱（上）](../../pages/nsc1025/n13382610.md) 
 #### [王友群：把女儿“献给”徐才厚的谷俊山](../../pages/nsc1025/n13382520.md) 
-#### [王赫：拜习视频会与中共心理战](../../pages/nsc1025/n13382429.md) 
-#### [周晓辉： 六中全会决议缘何淡化避谈罪恶](../../pages/nsc1025/n13382247.md) 
-#### [【名家专栏】新法案将向非法移民支付百亿美元](../../pages/nsc1025/n13381775.md) 
-#### [夏林：中共控制气候变化，你相信吗？](../../pages/nsc1025/n13381993.md) 
-#### [【名家专栏】中共怕泄露真实经济数据 拒合作](../../pages/nsc1025/n13381823.md) 
-#### [程晓农：换届、独裁和政变？](../../pages/nsc1025/n13381085.md) 
-#### [王友群：百年中共没能解决接班人问题](../../pages/nsc1025/n13380067.md) 
 
 ---
 #### 第 [ [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) ] 页
