--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】国际奥委会与彭帅的通话可信吗？](../../pages/nsc993/n13393022.md) 
 #### [【网海拾贝】北京办冬奥避不过人权问题](../../pages/nsc993/n13390863.md) 
 #### [【网海拾贝】美应将打开党国互联网作为要务](../../pages/nsc993/n13388446.md) 
 #### [陈达：“收复”台湾实冒名](../../pages/nsc993/n13388644.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】利用病毒控制人民的中共比病毒还毒](../../pages/nsc993/n13366895.md) 
 #### [豪车女遭查喊“叫yuwei过来” 网民：酒驾反腐](../../pages/nsc993/n13366842.md) 
 #### [理悟：党把代表当什么](../../pages/nsc993/n13366816.md) 
-#### [【网海拾贝】中共召开六中全会 北京阴风黑雾弥漫](../../pages/nsc993/n13364344.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
