--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [我们从小到大学到的历史哪些是假的（11）](../../pages/nsc1028/n13395097.md) 
 #### [中共罪行录之五十九：文革中的“栏杆市事件”](../../pages/nsc1028/n13390605.md) 
 #### [中共百年 是造福人民还是祸害人民（下）](../../pages/nsc1028/n13389389.md) 
 #### [中共百年 是造福人民还是祸害人民（上）](../../pages/nsc1028/n13388697.md) 
@@ -29,7 +30,6 @@
 #### [川人：长津湖之战 中国人究竟替谁在打仗？](../../pages/nsc1028/n13279096.md) 
 #### [别被史诗大片忽悠 长津湖战役惨绝人寰的真相](../../pages/nsc1028/n13279023.md) 
 #### [王友群：马寅初被批判 至少4.5亿胎儿被杀](../../pages/nsc1028/n13260313.md) 
-#### [【网海拾贝】港府以危害国安为名已拘捕153港人](../../pages/nsc1028/n13257369.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
