have a nice day!

--- a/indexes/nsc1025/149.md
+++ b/indexes/nsc1025/149.md
@@ -1,5 +1,13 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】感恩节寄语：求同存异的智慧](../../pages/nsc1025/n13398035.md) 
+#### [【名家专栏】珍惜美国 感恩神的恩典与祝福](../../pages/nsc1025/n13398013.md) 
+#### [王赫：中俄“新时代战略协作”只是演戏](../../pages/nsc1025/n13397654.md) 
+#### [陈思敏：习近平要加快“科技自主” 中国半导体实力如何？](../../pages/nsc1025/n13397621.md) 
+#### [袁斌：希望隐私得到尊重，会是彭帅本人的意思吗？](../../pages/nsc1025/n13397513.md) 
+#### [杨威：中共又变调 中美关系再陷入恶性循环？](../../pages/nsc1025/n13396881.md) 
+#### [王友群：中共高层都知道迫害法轮功是错的](../../pages/nsc1025/n13396509.md) 
+#### [【名家专栏】中国经济高速增长期行将结束](../../pages/nsc1025/n13395900.md) 
 #### [【名家专栏】当政府不作为时 社会需要义警](../../pages/nsc1025/n13395901.md) 
 #### [沈舟：美国如何评价中共攻台的初始能力](../../pages/nsc1025/n13394655.md) 
 #### [李靖宇：汪小菲大S离婚 背后中共因素知多少？](../../pages/nsc1025/n13395273.md) 
@@ -22,14 +30,6 @@
 #### [江西防疫扑杀宠物狗 党文化扭曲人性的例证](../../pages/nsc1025/n13390451.md) 
 #### [程晓农：白宫被迫进入中美冷战](../../pages/nsc1025/n13390313.md) 
 #### [【名家专栏】美国的艺术和文化需重归传统](../../pages/nsc1025/n13388042.md) 
-#### [钟原：前任中共领导人各掌权多少年（上）](../../pages/nsc1025/n13363341.md) 
-#### [张菁：中共频造新词的背后](../../pages/nsc1025/n13389672.md) 
-#### [岳山：北京二十大防反习 习家军铺满公安部](../../pages/nsc1025/n13389152.md) 
-#### [【名家专栏】中共宣传抗疫榜样 是推广强权](../../pages/nsc1025/n13389243.md) 
-#### [唐付民：改革开放，不只是双向的更应该是立体化的！](../../pages/nsc1025/n13388852.md) 
-#### [【名家专栏】中国粮“慌”不仅仅关乎食品](../../pages/nsc1025/n13388045.md) 
-#### [周田：美军哪些武器令中共军队难以应对（二）](../../pages/nsc1025/n13388240.md) 
-#### [周晓辉：孟宏伟妻突发声有蹊跷 或涉高层内斗](../../pages/nsc1025/n13388184.md) 
 
 ---
-#### 第 [ [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) / [141](./141.md) ] 页
+#### 第 [ [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) ] 页
