have a nice day!

--- a/indexes/nsc1025/149.md
+++ b/indexes/nsc1025/149.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】美国中小学灌输跨性别教育](../../pages/nsc1025/n13400495.md) 
+#### [【名家专栏】“世界工厂”会移出中国吗？](../../pages/nsc1025/n13400514.md) 
+#### [杨宁：捷克总统确诊 对中共态度亲近](../../pages/nsc1025/n13399805.md) 
+#### [袁斌：彭帅的“照片亮相”与薛蛮子的“电视认罪”](../../pages/nsc1025/n13399771.md) 
+#### [【名家专栏】强制打疫苗是个道德问题](../../pages/nsc1025/n13398947.md) 
+#### [郝平：六中全会后中共遭围堵 曝九大热点](../../pages/nsc1025/n13398733.md) 
+#### [谢田：美中经济安全报告触动中共敏感神经](../../pages/nsc1025/n13398537.md) 
 #### [【名家专栏】感恩节寄语：求同存异的智慧](../../pages/nsc1025/n13398035.md) 
 #### [【名家专栏】珍惜美国 感恩神的恩典与祝福](../../pages/nsc1025/n13398013.md) 
 #### [王赫：中俄“新时代战略协作”只是演戏](../../pages/nsc1025/n13397654.md) 
@@ -23,13 +30,6 @@
 #### [【名家专栏】中共利用联合国扩大其影响力 ](../../pages/nsc1025/n13389250.md) 
 #### [沈舟：“飞虎队”的另一个故事 联合空袭](../../pages/nsc1025/n13391928.md) 
 #### [陈思敏：前北京政法委书记有比ofo小黄车更大的问题](../../pages/nsc1025/n13392039.md) 
-#### [项云：中共打台湾还是打台湾牌](../../pages/nsc1025/n13391978.md) 
-#### [王友群：刘金国是“孙力军政治团伙”的？](../../pages/nsc1025/n13391684.md) 
-#### [岳山：彭帅事件背后有王沪宁的黑影](../../pages/nsc1025/n13391626.md) 
-#### [周晓辉：阿富汗现饥荒 中共帮塔利班小心翼翼](../../pages/nsc1025/n13391087.md) 
-#### [江西防疫扑杀宠物狗 党文化扭曲人性的例证](../../pages/nsc1025/n13390451.md) 
-#### [程晓农：白宫被迫进入中美冷战](../../pages/nsc1025/n13390313.md) 
-#### [【名家专栏】美国的艺术和文化需重归传统](../../pages/nsc1025/n13388042.md) 
 
 ---
 #### 第 [ [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) ] 页
