--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】大难即将临头，柳传志们的恐惧](../../pages/nsc993/n13397607.md) 
 #### [出生率创新低怪疫情？网民：睁说瞎话罢了](../../pages/nsc993/n13397543.md) 
 #### [【网海拾贝】国际奥委会被斥配合中共玩宣传](../../pages/nsc993/n13395182.md) 
 #### [【网海拾贝】国际奥委会与彭帅的通话可信吗？](../../pages/nsc993/n13393022.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】冥界之花惊现 中共的末日将至？](../../pages/nsc993/n13371400.md) 
 #### [【网海拾贝】中共六中全会是对邓小平的否定](../../pages/nsc993/n13369862.md) 
 #### [千百度：胡锡进评美议员访台 网友：吹牛不脸红](../../pages/nsc993/n13369454.md) 
-#### [【网海拾贝】利用病毒控制人民的中共比病毒还毒](../../pages/nsc993/n13366895.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
