--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】台湾参加民主峰会是划时代历史事件](../../pages/nsc993/n13401831.md) 
+#### [中共处罚远东 网友：“变相为民进党助选”](../../pages/nsc993/n13401101.md) 
+#### [【网海拾贝】《纽约邮报》列抵制北京冬奥六条理由](../../pages/nsc993/n13399807.md) 
 #### [【网海拾贝】大难即将临头，柳传志们的恐惧](../../pages/nsc993/n13397607.md) 
 #### [出生率创新低怪疫情？网民：睁说瞎话罢了](../../pages/nsc993/n13397543.md) 
 #### [【网海拾贝】国际奥委会被斥配合中共玩宣传](../../pages/nsc993/n13395182.md) 
@@ -27,9 +30,6 @@
 #### [祝君安：读六中公报](../../pages/nsc993/n13375031.md) 
 #### [朴厚：惊闻活摘](../../pages/nsc993/n13374864.md) 
 #### [【网海拾贝】六中全会给中共领导人重排座次](../../pages/nsc993/n13373604.md) 
-#### [【网海拾贝】冥界之花惊现 中共的末日将至？](../../pages/nsc993/n13371400.md) 
-#### [【网海拾贝】中共六中全会是对邓小平的否定](../../pages/nsc993/n13369862.md) 
-#### [千百度：胡锡进评美议员访台 网友：吹牛不脸红](../../pages/nsc993/n13369454.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
