--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,7 @@
 ### 纪元评论：以史为鉴
 ---
+#### [【名家专栏】为什么而感恩 林肯总统如是说](../../pages/nsc1028/n13402501.md) 
+#### [第三次分配 中产阶级受重击](../../pages/nsc1028/n13401007.md) 
 #### [我们从小到大学到的历史哪些是假的（11）](../../pages/nsc1028/n13395097.md) 
 #### [中共罪行录之五十九：文革中的“栏杆市事件”](../../pages/nsc1028/n13390605.md) 
 #### [中共百年 是造福人民还是祸害人民（下）](../../pages/nsc1028/n13389389.md) 
@@ -28,8 +30,6 @@
 #### [中共之无法 皆因其无天](../../pages/nsc1028/n13281088.md) 
 #### [王友群：为何毛泽东点名粟裕是军中“坏人”？](../../pages/nsc1028/n13279118.md) 
 #### [川人：长津湖之战 中国人究竟替谁在打仗？](../../pages/nsc1028/n13279096.md) 
-#### [别被史诗大片忽悠 长津湖战役惨绝人寰的真相](../../pages/nsc1028/n13279023.md) 
-#### [王友群：马寅初被批判 至少4.5亿胎儿被杀](../../pages/nsc1028/n13260313.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
