--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】对中共绥靖和默许是“死胡同”](../../pages/nsc993/n13403727.md) 
+#### [【三退大潮】红二代：中共是魔鬼 赶紧三退](../../pages/nsc993/n13403593.md) 
+#### [郑纯清：“共产主义大食堂”写照](../../pages/nsc993/n13403590.md) 
 #### [【网海拾贝】台湾参加民主峰会是划时代历史事件](../../pages/nsc993/n13401831.md) 
 #### [中共处罚远东 网友：“变相为民进党助选”](../../pages/nsc993/n13401101.md) 
 #### [【网海拾贝】《纽约邮报》列抵制北京冬奥六条理由](../../pages/nsc993/n13399807.md) 
@@ -27,9 +30,6 @@
 #### [中共罪行录之五十八：高度组织化的抢劫](../../pages/nsc993/n13376009.md) 
 #### [“我被菲律宾了，我的行程卡变黄了”](../../pages/nsc993/n13375076.md) 
 #### [【网海拾贝】韭菜们以后想关灯吃面都吃不起咯](../../pages/nsc993/n13375100.md) 
-#### [祝君安：读六中公报](../../pages/nsc993/n13375031.md) 
-#### [朴厚：惊闻活摘](../../pages/nsc993/n13374864.md) 
-#### [【网海拾贝】六中全会给中共领导人重排座次](../../pages/nsc993/n13373604.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
