have a nice day!

--- a/indexes/nsc1025/150.md
+++ b/indexes/nsc1025/150.md
@@ -1,5 +1,6 @@
 ### 纪元评论：时政评论
 ---
+#### [【名家专栏】媒体诽谤里滕豪斯 或被起诉](../../pages/nsc1025/n13405795.md) 
 #### [陈思敏：澳门赌厅大鳄周焯华落网背后牵连有多广？](../../pages/nsc1025/n13405446.md) 
 #### [沈舟：习近平讲话印证美国对中共军力评估](../../pages/nsc1025/n13404726.md) 
 #### [【名家专栏】宗教与美国民主的道德基础](../../pages/nsc1025/n13403931.md) 
@@ -29,7 +30,6 @@
 #### [袁斌：希望隐私得到尊重，会是彭帅本人的意思吗？](../../pages/nsc1025/n13397513.md) 
 #### [杨威：中共又变调 中美关系再陷入恶性循环？](../../pages/nsc1025/n13396881.md) 
 #### [王友群：中共高层都知道迫害法轮功是错的](../../pages/nsc1025/n13396509.md) 
-#### [【名家专栏】中国经济高速增长期行将结束](../../pages/nsc1025/n13395900.md) 
 
 ---
-#### 第 [ [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) / [142](./142.md) ] 页
+#### 第 [ [150](./150.md) / [149](./149.md) / [148](./148.md) / [147](./147.md) / [146](./146.md) / [145](./145.md) / [144](./144.md) / [143](./143.md) ] 页
