--- a/indexes/nsc993/67.md
+++ b/indexes/nsc993/67.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [维权律师：北京许娜等11位法轮功学员无罪](../../pages/nsc993/n13405419.md) 
 #### [【网海拾贝】对中共绥靖和默许是“死胡同”](../../pages/nsc993/n13403727.md) 
 #### [【三退大潮】红二代：中共是魔鬼 赶紧三退](../../pages/nsc993/n13403593.md) 
 #### [郑纯清：“共产主义大食堂”写照](../../pages/nsc993/n13403590.md) 
@@ -29,7 +30,6 @@
 #### [【网海拾贝】9名网友实名给六中全会提建议竟遭审讯](../../pages/nsc993/n13376535.md) 
 #### [中共罪行录之五十八：高度组织化的抢劫](../../pages/nsc993/n13376009.md) 
 #### [“我被菲律宾了，我的行程卡变黄了”](../../pages/nsc993/n13375076.md) 
-#### [【网海拾贝】韭菜们以后想关灯吃面都吃不起咯](../../pages/nsc993/n13375100.md) 
 
 ---
 #### 第 [ [67](./67.md) / [66](./66.md) / [65](./65.md) / [64](./64.md) / [63](./63.md) / [62](./62.md) / [61](./61.md) / [60](./60.md) ] 页
