--- a/indexes/nsc1028/57.md
+++ b/indexes/nsc1028/57.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共是怎么为自己涂脂抹粉的（5）](../../pages/nsc1028/n13405477.md) 
 #### [李清：京剧大师周信芳和他的一家人](../../pages/nsc1028/n13391411.md) 
 #### [【名家专栏】为什么而感恩 林肯总统如是说](../../pages/nsc1028/n13402501.md) 
 #### [第三次分配 中产阶级受重击](../../pages/nsc1028/n13401007.md) 
@@ -29,7 +30,6 @@
 #### [中共罪行录之五十四：中国人失去的自由权利](../../pages/nsc1028/n13290123.md) 
 #### [无神论统御的基督教王国](../../pages/nsc1028/n13281280.md) 
 #### [中共之无法 皆因其无天](../../pages/nsc1028/n13281088.md) 
-#### [王友群：为何毛泽东点名粟裕是军中“坏人”？](../../pages/nsc1028/n13279118.md) 
 
 ---
 #### 第 [ [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) / [52](./52.md) / [51](./51.md) / [50](./50.md) ] 页
